<resources>
    <string name="app_name">RU Pizza</string>
    <string name="integer_1">integer 1</string>
    <string name="integer_2">integer 2</string>
    <string name="sum">sum</string>
    <string name="add_2_integers">Add 2 Integers</string>
    <string name="customer_phone_number">Customer phone number:</string>
    <string name="order_total">Order Total$:</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="subtotal">SubTotal$:</string>
    <string name="sales_tax">Sales Tax$</string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="empty_space">    </string>
    <string name="phone_number">Phone Number:</string>
    <string name="ru_pizza">RU Pizza</string>
    <string name="enter_here">enter here</string>
    <string name="order_deluxe">Order Deluxe</string>
    <string name="order_hawaiian">Order Hawaiian</string>
    <string name="order_pepperoni">Order Pepperoni</string>
    <string name="current_order">Current Order</string>
    <string name="stored_orders">Stored Orders</string>
    <string name="size">Size:</string>
    <string name="additional_toppings">Additional Toppings</string>
    <string name="if_you_want_to_add_you_can_click_the_toppings_you_want_and_if_you_want_to_remove_you_can_also_click_the_topping_directly">
        If you want to add, you can click the toppings you want, and if you want to remove, you can also click the
        topping directly.
    </string>
    <string name="selected_toppings">Selected Toppings</string>
    <string name="price">Price$</string>
    <string name="textview">TextView</string>
    <string name="add_to_order">Add to Order</string>
    <string name="Customization">Customization</string>
    <string name="Mainactivity">Main Menu</string>
</resources>