<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/constraintLayout">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="411dp"
            android:layout_height="560dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <TextView
                android:text="@string/ru_pizza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView14" android:textSize="34sp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp" android:id="@+id/textView15"/>
        <TextView
                android:text="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView16" android:textSize="24sp"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="397dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_here" android:id="@+id/phonenumber"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="56dp" android:id="@+id/textView17"/>
        <Button
                android:text="@string/order_deluxe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/thedeluxe"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView18"/>
        <Button
                android:text="@string/order_hawaiian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/thehawaiian"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView19"/>
        <Button
                android:text="@string/order_pepperoni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/thepepperoni"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView20"/>
        <Button
                android:text="@string/current_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/callcurrent"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView21"/>
        <Button
                android:text="@string/stored_orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/callstored"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>