<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" android:id="@+id/thelist">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/current_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView2" android:textSize="34sp"/>
        <TextView
                android:text="@string/customer_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView6" android:textSize="24sp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/number_c"
                android:focusable="false"
                android:clickable="false"/>
        <ListView
                android:layout_width="match_parent"
                android:layout_height="261dp" android:id="@+id/list_c" android:choiceMode="singleChoice" android:listSelector="#666666"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="45dp">
            <TextView
                    android:text="@string/subtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView7" android:layout_weight="1"
                    android:textSize="24sp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/subtotal_c" android:layout_weight="1"
                    android:focusable="false"
                    android:clickable="false"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">
            <TextView
                    android:text="@string/sales_tax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_weight="1"
                    android:textSize="24sp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/tax_c" android:layout_weight="1"
                    android:focusable="false"
                    android:clickable="false"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="49dp">
            <TextView
                    android:text="@string/order_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView10" android:layout_weight="1"
                    android:textSize="24sp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/total_c" android:layout_weight="1"
                    android:focusable="false"
                    android:clickable="false"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:text="@string/remove_pizza"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content" android:id="@+id/removepizza" android:layout_weight="1"/>
            <TextView
                    android:text="@string/empty_space"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView11" android:layout_weight="1"/>
            <Button
                    android:text="@string/add_to_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/add_c" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>