<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/constraintLayout2">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="354dp"
            android:layout_height="616dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.608" app:layout_constraintHorizontal_bias="0.491">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="57dp">
            <ImageView
                    android:layout_width="198dp"
                    android:layout_height="64dp" tools:srcCompat="@drawable/deluxeimage"
                    android:id="@+id/imageView" android:layout_weight="1"/>
            <TextView
                    android:text="@string/textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/pizzaname" android:layout_weight="1"
                    android:textSize="24sp"/>
        </LinearLayout>
        <TextView
                android:text="@string/size"
                android:layout_width="match_parent"
                android:layout_height="53dp" android:id="@+id/textView3" android:textSize="20sp"/>
        <Spinner
                android:layout_width="197dp"
                android:layout_height="wrap_content" android:id="@+id/spinnerone"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="34dp" android:id="@+id/textView"/>
        <TextView
                android:text="@string/additional_toppings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView4" android:textSize="16sp"/>
        <ListView
                android:layout_width="match_parent"
                android:layout_height="125dp" android:id="@+id/additionaltoppings"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="49dp">
            <TextView
                    android:text="@string/if_you_want_to_add_you_can_click_the_toppings_you_want_and_if_you_want_to_remove_you_can_also_click_the_topping_directly"
                    android:layout_width="match_parent"
                    android:layout_height="59dp" android:id="@+id/textView8" android:layout_weight="1"
                    android:textSize="13sp"/>
        </LinearLayout>
        <TextView
                android:text="@string/selected_toppings"
                android:layout_width="match_parent"
                android:layout_height="24dp" android:id="@+id/textView5" android:textSize="16sp"/>
        <ListView
                android:layout_width="match_parent"
                android:layout_height="89dp" android:id="@+id/selectedtoppings"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="37dp">
            <TextView
                    android:text="@string/price"
                    android:layout_width="38dp"
                    android:layout_height="wrap_content" android:id="@+id/textView12" android:layout_weight="1"
                    android:textSize="20sp"/>
            <TextView
                    android:text="@string/textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/price" android:layout_weight="1"
                    android:textSize="16sp"/>
        </LinearLayout>
        <Button
                android:text="@string/add_to_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/addtoorder"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>