<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StoredActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="354dp"
            android:layout_height="615dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <TextView
                android:text="@string/stored_orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView13" android:textSize="34sp"/>
        <TextView
                android:text="@string/customer_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView22" android:textSize="24sp"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="47dp" android:id="@+id/spinnertwo"/>
        <ListView
                android:layout_width="match_parent"
                android:layout_height="386dp" android:id="@+id/list_s"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="58dp">
            <TextView
                    android:text="@string/order_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView25" android:layout_weight="1"
                    android:textSize="24sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/total_s" android:layout_weight="1"
                    android:textSize="24sp"/>
        </LinearLayout>
        <Button
                android:text="@string/cancel_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/cancel_s"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView27"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>